Cleaned up directory structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>React Redux Starter</h1>
-        <script type="text/javascript" src="static/js/build/bundle.js"></script>
+        <script type="text/javascript" src="static/js/bundle.js"></script>
     </body>
 </html>
