Added css modules capability

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>It's not much...yet</title>
+        <link rel="stylesheet" href="static/css/bundle.css">
     </head>
     <body>
         <h1>React Redux Starter</h1>
