--- a/static/index.html
+++ b/static/index.html
@@ -3,10 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>It's not much...yet</title>
-        <link rel="stylesheet" href="static/css/bundle.css">
+        <link rel="stylesheet" href="css/bundle.css">
     </head>
     <body>
         <h1>React Redux Starter</h1>
-        <script type="text/javascript" src="static/js/bundle.js"></script>
+        <div class="container">
+
+        </div>
+        <script type="text/javascript" src="js/bundle.js"></script>
     </body>
 </html>
